2017-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/paragraph.t: Avoid using method call syntax to call 
	subroutines in Texinfo::Convert::Paragraph.  Only run each test 
	once.  Remove tests using 'lines_counter' value on paragraph 
	hash.

2017-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm:  Remove remaining usage
	of method call syntax when calling subroutines in the
	Texinfo::Convert::Paragraph module.

2017-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS/Makefile.am,
	* tp/Texinfo/MiscXS/configure.ac: Remove code for using gnulib, 
	as it isn't required for this module, and this saves the 
	complication of having an extra gnulib checkout.
	* tp/Texinfo/MiscXS/lib,
	* tp/Texinfo/MiscXS/snippet: Remove all files.
	* tp/Texinfo/MiscXS/m4: Remove all gnulib files.

2017-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm: Import some symbols for 
	subroutines from the Texinfo::Convert::Paragraph module.  Reduce
	usage of method call syntax when calling subroutines in the
	Texinfo::Convert::Paragraph module.

2017-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_end): Clear
	'in_use' on 'state' structure as well as in the 'saved_states'.
	This avoids the storage being lost if 'xspara__switch_state' 
	copies 'state' into 'saved_states'.

2017-01-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS/miscxs.c,
	* tp/Texinfo/MiscXS/misc.c: Rename file in order to avoid 
	clashing with MiscXS.c (file generated from MiscXS.xs by xsubpp)
	on case-insensitive file systems.

2017-01-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c (PARAGRAPH): New 
	configuration fields 'no_final_newline' and 'add_final_space'.
	(xspara_new): Set 'in_use' on state so that it is saved properly.
	(xspara_init_state): Remove some out-of-date comments.  Retrieve